--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -111,6 +111,7 @@ a:hover{color:#aaa; text-decoration:none;}
 
 .contact_panel{
   min-height: 50%;
+  background-image: url(/assets/contact_panel_blur.jpg);
 }
 .newsletter_panel{
   height: 50%; color:white;
