--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -90,52 +90,28 @@ a:hover{color:#aaa; text-decoration:none;}
 }
 
 
-
-.landing_top{
-  height: 100%;
-  background-color: white;
-  padding-top: 20%;
-}
-
-.first_panel, .second_panel, .product_panel{
-  height: 100%;
-  overflow:hidden;
-}
-
-.second_panel{
-
-}
-.product_panel{
-
-}
-
-.contact_panel{
-  min-height: 50%;
-  background-image: url(/assets/contact_panel_blur.jpg);
-}
-.newsletter_panel{
-  height: 50%; color:white;
-  background-color:#333;
-  padding-top:9%;
-  & .title{
-    font-size: 30px; margin:10px auto; text-align:center; padding-top:30px;
-  }
-}
-.footer_panel{
-  min-height: 20%;
-}
-
 .landing_logo{
   max-width: 560px ; margin: 5px auto;
   padding: 10px 30px;
 }
+
+.stayintouch{
+  font-size: 20px; max-width:300px; font-weight:bold;
+  margin: 10px auto; text-align:center; padding-top: 4%;
+}
+.andmuchmore{
+  font-size: 30px; max-width:300px; font-weight:bold;
+  margin: 10px auto; text-align:center; padding-top: 4%;
+  font-family: 'altera'; color:#8F8F8F;
+}
+
 .l_arrow_bottom{
   position: relative; bottom: 2px; margin: 10px auto; 
-  width: 30px; padding-top: 10%;
+  width: 30px; padding-top: 6%;
   font-size: 40px; color: black; text-align: center;
   transition: 0.1s;
   &:hover{
-    color: #666; padding-top: 9.5%;
+    color: #666; padding-top: 5.5%;
     transition: 0.1s;
 
   }
@@ -259,6 +235,8 @@ input[type="submit"], button{
 
 
 
+
+
 .half{
     &.bowtie{
       background-image: url('/assets/bowtie.jpg');
@@ -268,6 +246,80 @@ input[type="submit"], button{
 
 
 
+
+
+
+
+.landing_top{
+  height: 100%;
+  background-color: white;
+  padding-top: 10%;
+}
+
+.first_panel,{
+  height: 100%;
+  overflow:hidden;
+}
+
+.second_panel{
+  text-align: center; padding:200px 10px;
+  & .title{
+    font-size: 60px;
+    font-family: 'altera';
+    margin-bottom:50px;
+    & img{
+      width: 150px; margin:5px 20px;
+    }
+  }
+  & .text{
+    font-size: 18px; line-height:2em;
+    color: #999;
+    max-width: 500px;
+    margin: 20px auto;
+    padding:10px;
+  }
+}
+
+
+.contact_panel_top, .contact_panel{
+  background-size:cover; background-position:center; background-repeat:no-repeat;
+  background-attachment:fixed; font-size:18px;
+}
+.contact_panel{
+  & .half{
+    & .text{
+      line-height: 2em;
+    }
+  }
+}
+.contact_panel_top{
+  background-image: url('/assets/contact_panel.jpg');
+  height: 500px;
+}
+
+.product_panel{
+  text-align: center; padding:10px 30px;
+  & .main_product_photo{
+      width: 95%; max-width:800px; margin:50px auto; 
+  }
+  .product_thumbnail_border{
+    border-radius:10px; padding:15px;
+    width: 200px; height:200px; border:1px solid #A8A8A8;
+    overflow: hidden; margin:5px; display:inline-block;
+    .product_thumbnail{
+      background-color:red; height:100%;
+    }
+  }
+}
+
+.footer_panel{
+  text-align:center;
+  padding: 200px 10px 100px;
+  & .social_icon{
+    width: 30px; height:30px; margin:5px; display:inline-block;
+    & img{ width:100%; }
+  }
+}
 
 
 
@@ -282,14 +334,27 @@ input[type="submit"], button{
     }
   }
   .first_panel{
-    background-image: url('/assets/first_panel.jpg');
+    background-image: url('/assets/first_panel_phone.jpg');
     padding-top:200%; padding-right:5%;
     background-size:cover;
-    & .text{
+    & .panel_text{
       font-family: 'altera_bold';
       padding:20px; font-size:20px; color:white;
       background-color: rgba(black, 0.4);
       float: right; margin:10px;
+    }
+  }
+  .contact_panel{
+    padding:100px 20px; overflow:hidden;
+    background-image: url('/assets/contact_panel_blur.jpg');
+  }
+  .product_panel{
+     padding:10px;
+    .product_thumbnail_border{
+      width: 100px; height:100px;
+      .product_thumbnail{
+        background-color:red; height:100%;
+      }
     }
   }
 }
@@ -306,12 +371,16 @@ input[type="submit"], button{
     background-image: url('/assets/first_panel.jpg');
     padding-top:120%; padding-right:10%;
     background-size:cover;
-    & .text{
+    & .panel_text{
       font-family: 'altera';
-      padding:20px; font-size:35px;
+      padding:10px; font-size:35px;
       background-color: rgba(white, 0.6);
       float: right; margin:20px;
     }
+  }
+  .contact_panel{
+    padding:100px; overflow:hidden;
+    background-image: url('/assets/contact_panel_blur.jpg');
   }
 }
 
@@ -322,10 +391,14 @@ input[type="submit"], button{
   }
   .first_panel{
     padding-top:30%; padding-right:5%;
-    & .text{
+    & .panel_text{
       font-family: 'altera';
-      padding:20px; font-size:50px; color:black;
+      padding:10px; font-size:50px; color:black;
       background-color: rgba(white, 0.4);
+      &.big{
+        font-size: 65px;
+        padding:30px; 
+      }
     }
   }
 }
