--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -2,25 +2,24 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-body {
-  background-color: #fff;
-  margin:0px auto;
-  color: #333; font-size: 13px; line-height: 18px;
-  // font-family: verdana, arial, helvetica, sans-serif;
-  // font-family: 'webly_reg';
-}
-
 html, body {
   margin:0px auto;
   height:100%;
 }
 html{overflow-y:scroll;}
 
-body,td,th {
-  /* font-family: Arial, Helvetica, sans-serif;
-  color: #000;
-  font-size: 12px; */
+body {
+  margin:0px auto;
 }
+
+body,td,th {
+  font-family: 'altera_bold';
+  /* color: #000; */
+  font-size: 12px;
+}
+
+a, a:visited{color:#999; text-decoration:none;}
+a:hover{color:#aaa; text-decoration:none;}
 
 hr, br{
   clear: both;
@@ -42,14 +41,6 @@ pre {
   font-size: 11px;
 }
 
-a {
-  color: #fff;
-
-  &:visited, &:hover, &:focus {
-    color: #fff; text-decoration:none;
-    // background-color: #000;
-  }
-}
 
 div {
   &.field, &.actions {
@@ -101,139 +92,12 @@ div {
 }
 
 
-
-
-
-input[type="submit"], button{
-  font-size:11px; font-weight: bold;
-  border-radius:3px;
-  // border:1px solid #ccc;
-  border:0;
-  display:inline-block;
-  padding:6px 15px 4px 15px; margin:5px 1% 5px 0;
-  color:#666;
-  &:hover{
-    background-color:#ccc;
+.js-form{
+  border:1px #B2B2B2 solid; background-color:rgba(0,0,0, 0.5); padding:20px;
+  &.white{
+    background-color:rgba(white, 1);
+    transition: 0.5s;
+    text-align: center;
+    padding:50px; color:#42C147;
   }
-
-  &.red{
-    // border:1px solid #7D0009;
-    background-color:#FF0000; color:#fff;
-    &:hover{
-      background-color:#7D0009;
-    }
-  }
-
-  &.blue{
-    // border:1px solid #517DAC;
-    background-color:#419EFE; color:#fff;
-    &:hover{
-      background-color:#517DAC;
-    }
-  }
-
-  &.green_sft{
-    // border:1px solid #00A30F;
-    background-color:#4EBC52; color:#fff;
-    &:hover{
-      background-color:#006A0A;
-    }
-  }
-
-  &.reg_btn{
-    width:inherit; float: none;
-    border-radius:3px;
-  }
-  &.small_btn{
-    padding:2px 5px; float: none;
-    border-radius:3px;
-  }
-  &.big_btn{
-    padding:10px 15px; float: none;
-    border-radius:3px; font-size:15px;
-  }
-  &.circle{
-    border-radius:50%;
-  }
-}
-
-
-textarea, input, select{
-  border-radius:2px;
-  border:1px solid #999;
-  // border:0;
-  background-color: white;
-  font-size:13px; color:#333;
-  &.half{
-    padding:5px 8px; margin:5px 0.5%; width:49%;
-    display:inline-block; float:left;
-  }
-  &.full{
-    padding:5px 8px; margin:5px 0.5%; width:99%;
-    display:inline-block; float:none;
-  }
-}
-
-textarea{
-  min-height: 100px;
-  min-width: 400px;
-  padding:5px 8px;
-}
-
-input{
-  padding:5px 8px; margin:5px 5px 5px 0; color:#333;
-  &.login{
-    border-radius:0px; border:0;
-    border-bottom:1px solid #999;
-    background-color: transparent;
-    float: none; width: 250px;
-  }
-  &.login_submit{
-    float: none; width: 250px; padding-top:12px;
-    background-color:#4482c3; border:0px;
-    font-family:'altera'; color:#fff; font-weight:bold; font-size:15px;
-    &:hover{
-      background-color:#4F94FF;
-    }
-  }
-
-  &.space-5{letter-spacing:0.5em;}
-  &.space-1{letter-spacing:0.1em;}
-  ::-webkit-input-placeholder {
-     color:#999;
-     letter-spacing:0em;
-  }
-  &[type='color']{
-    height:40px;
-  }
-  &[type='checkbox']{
-    border:0px; background-color:#DDDDDD;
-  }
-  &[type='file']{
-    font-size:12px;
-    padding:5px; margin-top:10px;
-  }
-}
-
-select{padding:5px 8px; margin:5px 1% 5px 0;}
-
-input:focus,
-select:focus,
-textarea:focus,
-button:focus,
-a:focus {
-    outline: none;
-    text-decoration:none;
-}
-
-
-.reddot, .greendot{
-  width:8px; height:8px; display:inline-block;
-  border-radius:50%; margin-bottom:0.5px;
-}
-.reddot{
-  background-color:red;
-}
-.greendot{
-  background-color:#0FDF0F;
 }
