--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -99,5 +99,10 @@ div {
     transition: 0.5s;
     text-align: center;
     padding:50px; color:#42C147;
+    & .social_icon{
+      width: 30px; height:30px; margin:5px; display:inline-block;
+      & img{ width:100%; }
+    }
+    & .findus{ color:black; font-size:13px; }
   }
 }
