finished lanfing page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -252,7 +252,7 @@ input[type="submit"], button{
 
 .landing_top{
   background-color: white;
-  padding-top: 8%;
+  padding-top: 100px;
 }
 
 .first_panel,{
@@ -312,7 +312,7 @@ input[type="submit"], button{
 
 .footer_panel{
   text-align:center;
-  padding: 200px 10px 100px;
+  padding: 200px 10px 30px;
   & .social_icon{
     width: 30px; height:30px; margin:5px; display:inline-block;
     & img{ width:100%; }
