--- a/app/views/site/landingpage.html.erb
+++ b/app/views/site/landingpage.html.erb
@@ -93,4 +93,7 @@
  <a href="https://www.instagram.com/MaelCreations/"><div class="social_icon"><img src="/assets/instagram.png"></div></a>
  <br>
  find us on social media
+ <div style="margin-top:10px;">
+ 	Designed and coded by: <a href="http://www.aldelcy.com" target="_blank">Al Delcy</a>
+ </div>
 </div>
